{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 71,
  "lineage": "c58bd198-f852-d718-5144-7f9753a387ab",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "aws_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0eb0eccbc295f8577",
            "association_id": "eipassoc-0e25fc415d9a48bfc",
            "domain": "vpc",
            "id": "eipalloc-0eb0eccbc295f8577",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0b2cc59d852eb400e",
            "private_dns": "ip-10-10-2-225.ec2.internal",
            "private_ip": "10.10.2.225",
            "public_dns": "ec2-44-211-101-212.compute-1.amazonaws.com",
            "public_ip": "44.211.101.212",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.web_server_ig",
            "aws_vpc.web_server_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "aws_eip2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b6268a4dfd6cbddf",
            "association_id": "eipassoc-04db00eacafc88964",
            "domain": "vpc",
            "id": "eipalloc-0b6268a4dfd6cbddf",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0ceb3c1d6f5a466ff",
            "private_dns": "ip-10-10-4-153.ec2.internal",
            "private_ip": "10.10.4.153",
            "public_dns": "ec2-3-215-144-205.compute-1.amazonaws.com",
            "public_ip": "3.215.144.205",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.web_server_ig",
            "aws_vpc.web_server_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "aws_eip3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-093a28375c8feab04",
            "association_id": "eipassoc-03b61b9aba7753335",
            "domain": "vpc",
            "id": "eipalloc-093a28375c8feab04",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0c4e05937899cd349",
            "private_dns": "ip-10-10-5-145.ec2.internal",
            "private_ip": "10.10.5.145",
            "public_dns": "ec2-54-92-196-171.compute-1.amazonaws.com",
            "public_ip": "54.92.196.171",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.web_server_ig",
            "aws_vpc.web_server_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b5eea76982371e91",
            "arn": "arn:aws:ec2:us-east-1:070564344893:instance/i-0457e5dda6b73d22a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0457e5dda6b73d22a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0bacf0047542c2a98",
            "private_dns": "ip-10-10-1-244.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.1.244",
            "public_dns": "ec2-107-21-71-12.compute-1.amazonaws.com",
            "public_ip": "107.21.71.12",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c5b9e85a8453bbf6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-00302e783747891b9"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fee1fe3fdb94d107",
            "tags": {
              "Name": "app server"
            },
            "tags_all": {
              "Name": "app server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00302e783747891b9"
            ]
          },
          "dependencies": [
            "aws_security_group.web_server_sg",
            "aws_subnet.private_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b5eea76982371e91",
            "arn": "arn:aws:ec2:us-east-1:070564344893:instance/i-029a96ffea1d81877",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-029a96ffea1d81877",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-056162e062451e35f",
            "private_dns": "ip-10-10-3-198.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.3.198",
            "public_dns": "ec2-54-162-204-143.compute-1.amazonaws.com",
            "public_ip": "54.162.204.143",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-093eec50c7481f4b0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-02f0839fd0756ede9"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-018dd1cd0c567b203",
            "tags": {
              "Name": "dev server"
            },
            "tags_all": {
              "Name": "dev server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02f0839fd0756ede9"
            ]
          },
          "dependencies": [
            "aws_security_group.web_server_sg2",
            "aws_subnet.private2_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b5eea76982371e91",
            "arn": "arn:aws:ec2:us-east-1:070564344893:instance/i-04f61509c19888a69",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04f61509c19888a69",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-048315a05bc847064",
            "private_dns": "ip-10-10-3-124.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.3.124",
            "public_dns": "ec2-54-166-180-227.compute-1.amazonaws.com",
            "public_ip": "54.166.180.227",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0696ee9a32cc99329",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-02f0839fd0756ede9"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-018dd1cd0c567b203",
            "tags": {
              "Name": "web server"
            },
            "tags_all": {
              "Name": "web server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02f0839fd0756ede9"
            ]
          },
          "dependencies": [
            "aws_security_group.web_server_sg2",
            "aws_subnet.private2_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "web_server_ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:070564344893:internet-gateway/igw-0e650766dd31adc50",
            "id": "igw-0e650766dd31adc50",
            "owner_id": "070564344893",
            "tags": {
              "Name": "web_server_internet_gateway"
            },
            "tags_all": {
              "Name": "web_server_internet_gateway"
            },
            "vpc_id": "vpc-051eda5364b059cf3"
          },
          "dependencies": [
            "aws_vpc.web_server_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "web_server_ng",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0eb0eccbc295f8577",
            "connectivity_type": "public",
            "id": "nat-0319757115a363cef",
            "network_interface_id": "eni-0b2cc59d852eb400e",
            "private_ip": "10.10.2.225",
            "public_ip": "44.211.101.212",
            "subnet_id": "subnet-045b984ae1e7d3ccf"
          },
          "dependencies": [
            "aws_eip.aws_eip",
            "aws_internet_gateway.web_server_ig",
            "aws_subnet.public_subnet",
            "aws_vpc.web_server_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "web_server_ng2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b6268a4dfd6cbddf",
            "connectivity_type": "public",
            "id": "nat-0029591bcf88498b8",
            "network_interface_id": "eni-0ceb3c1d6f5a466ff",
            "private_ip": "10.10.4.153",
            "public_ip": "3.215.144.205",
            "subnet_id": "subnet-0df105704a7e143ce"
          },
          "dependencies": [
            "aws_eip.aws_eip2",
            "aws_internet_gateway.web_server_ig",
            "aws_subnet.public2_subnet",
            "aws_vpc.web_server_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "web_server_ng3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-093a28375c8feab04",
            "connectivity_type": "public",
            "id": "nat-03626f8caf68fac3c",
            "network_interface_id": "eni-0c4e05937899cd349",
            "private_ip": "10.10.5.145",
            "public_ip": "54.92.196.171",
            "subnet_id": "subnet-00c6e62feded6e5f4"
          },
          "dependencies": [
            "aws_eip.aws_eip3",
            "aws_internet_gateway.web_server_ig",
            "aws_subnet.private3_subnet",
            "aws_vpc.web_server_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "web_server_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:070564344893:route-table/rtb-02078a03e9d12c4fc",
            "id": "rtb-02078a03e9d12c4fc",
            "owner_id": "070564344893",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e650766dd31adc50",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route Table"
            },
            "tags_all": {
              "Name": "Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-051eda5364b059cf3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.web_server_ig",
            "aws_vpc.web_server_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "web_server_rt2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:070564344893:route-table/rtb-0bb8544eb67c7496d",
            "id": "rtb-0bb8544eb67c7496d",
            "owner_id": "070564344893",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e650766dd31adc50",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route Table2"
            },
            "tags_all": {
              "Name": "Public Route Table2"
            },
            "timeouts": null,
            "vpc_id": "vpc-051eda5364b059cf3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.web_server_ig",
            "aws_vpc.web_server_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "web_server_rt3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:070564344893:route-table/rtb-099f86e3767da8dd2",
            "id": "rtb-099f86e3767da8dd2",
            "owner_id": "070564344893",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e650766dd31adc50",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route Table3"
            },
            "tags_all": {
              "Name": "Public Route Table3"
            },
            "timeouts": null,
            "vpc_id": "vpc-051eda5364b059cf3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.web_server_ig",
            "aws_vpc.web_server_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web_server_ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-084f16bcc8c1565e4",
            "route_table_id": "rtb-02078a03e9d12c4fc",
            "subnet_id": "subnet-045b984ae1e7d3ccf"
          },
          "dependencies": [
            "aws_internet_gateway.web_server_ig",
            "aws_route_table.web_server_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.web_server_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web_server_ass2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b43bf227d05c379e",
            "route_table_id": "rtb-0bb8544eb67c7496d",
            "subnet_id": "subnet-018dd1cd0c567b203"
          },
          "dependencies": [
            "aws_internet_gateway.web_server_ig",
            "aws_route_table.web_server_rt2",
            "aws_subnet.private2_subnet",
            "aws_vpc.web_server_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web_server_ass3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d091b88293a25efe",
            "route_table_id": "rtb-099f86e3767da8dd2",
            "subnet_id": "subnet-00c6e62feded6e5f4"
          },
          "dependencies": [
            "aws_internet_gateway.web_server_ig",
            "aws_route_table.web_server_rt3",
            "aws_subnet.private3_subnet",
            "aws_vpc.web_server_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_server_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:070564344893:security-group/sg-00302e783747891b9",
            "description": "Allow 80 and 22 ports into web server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00302e783747891b9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "web_server_sg",
            "name_prefix": "",
            "owner_id": "070564344893",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web_server_sg"
            },
            "tags_all": {
              "Name": "web_server_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-051eda5364b059cf3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.web_server_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_server_sg2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:070564344893:security-group/sg-02f0839fd0756ede9",
            "description": "Allow 80 and 22 ports into web server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02f0839fd0756ede9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "web_server_sg2",
            "name_prefix": "",
            "owner_id": "070564344893",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web_server_sg"
            },
            "tags_all": {
              "Name": "web_server_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-051eda5364b059cf3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.web_server_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_server_sg3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:070564344893:security-group/sg-0b24a6f142edc87e7",
            "description": "Allow 80 and 22 ports into web server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b24a6f142edc87e7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "web_server_sg3",
            "name_prefix": "",
            "owner_id": "070564344893",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web_server_sg"
            },
            "tags_all": {
              "Name": "web_server_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-051eda5364b059cf3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.web_server_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:070564344893:subnet/subnet-018dd1cd0c567b203",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-018dd1cd0c567b203",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "070564344893",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private2 Subnet"
            },
            "tags_all": {
              "Name": "Private2 Subnet"
            },
            "vpc_id": "vpc-051eda5364b059cf3"
          },
          "dependencies": [
            "aws_vpc.web_server_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private3_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:070564344893:subnet/subnet-00c6e62feded6e5f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00c6e62feded6e5f4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "070564344893",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private3 Subnet"
            },
            "tags_all": {
              "Name": "Private3 Subnet"
            },
            "vpc_id": "vpc-051eda5364b059cf3"
          },
          "dependencies": [
            "aws_vpc.web_server_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:070564344893:subnet/subnet-0fee1fe3fdb94d107",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fee1fe3fdb94d107",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "070564344893",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet"
            },
            "tags_all": {
              "Name": "Private Subnet"
            },
            "vpc_id": "vpc-051eda5364b059cf3"
          },
          "dependencies": [
            "aws_vpc.web_server_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:070564344893:subnet/subnet-0df105704a7e143ce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0df105704a7e143ce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "070564344893",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public2 Subnet"
            },
            "tags_all": {
              "Name": "Public2 Subnet"
            },
            "vpc_id": "vpc-051eda5364b059cf3"
          },
          "dependencies": [
            "aws_vpc.web_server_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public3_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:070564344893:subnet/subnet-0967ea70780009445",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0967ea70780009445",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "070564344893",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public2 Subnet"
            },
            "tags_all": {
              "Name": "Public2 Subnet"
            },
            "vpc_id": "vpc-051eda5364b059cf3"
          },
          "dependencies": [
            "aws_vpc.web_server_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:070564344893:subnet/subnet-045b984ae1e7d3ccf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-045b984ae1e7d3ccf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "070564344893",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet"
            },
            "tags_all": {
              "Name": "Public Subnet"
            },
            "vpc_id": "vpc-051eda5364b059cf3"
          },
          "dependencies": [
            "aws_vpc.web_server_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "web_server_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:070564344893:vpc/vpc-051eda5364b059cf3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-00f1ac17dfb611b37",
            "default_route_table_id": "rtb-0c33dc94c750ca226",
            "default_security_group_id": "sg-0fa8097eeeebeb078",
            "dhcp_options_id": "dopt-0f037b3d80d7ef6a2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-051eda5364b059cf3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c33dc94c750ca226",
            "owner_id": "070564344893",
            "tags": {
              "name": "web_server_web"
            },
            "tags_all": {
              "name": "web_server_web"
            }
          }
        }
      ]
    }
  ]
}